@@ -17,10 +17,14 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
 import sys
+from os.path import basename
+from random import choice, uniform
+from inspect import getsource
 
-from text import split_it
+from text import split_it, write_block
 from scanner import tokens
 from parser import Parser
+import template
 
 
 def _print_error(msg, lineno=None, offset=None, fname=None):
@@ -28,11 +32,13 @@ def _print_error(msg, lineno=None, offset=None, fname=None):
     parts = []
     if fname is not None:
         parts.append("%s:"%fname)
-    if lineno is not None:
-        parts.append("%d:"%lineno)
-        if offset is not None:
-            parts.append("%d:"%offset)
-    prefix = "".join(parts)
+        if lineno is not None:
+            parts.append("%d:"%lineno)
+            if offset is not None:
+                parts.append("%d:"%offset)
+        prefix = "".join(parts)
+    else:
+        prefix = "error:"
     if prefix:
         prefix = prefix+" "
     print >>sys.stderr, prefix+str(msg)
@@ -475,11 +481,89 @@ class Grammar(object):
             head = repr(r[0])
             tail = " ".join(map(repr, r[1:]))
             fd.write(prefix+"  %s -> %s\n"%(head, tail))
+
+    def write_example(self, fd=sys.stdout, params={}):
+        word = [ self.rules[-1][1] ]
+        todo = set(self.rules.keys())
+
+        nt = self.nonterminals
+        def count_nt(k):
+            return len([X for X in self.rules[k][1:] if X in nt])
+
+        while todo:
+            actions = []
+            for i,X in enumerate(word):
+                if X not in nt:
+                    continue
+                rules = set(k for k,l in self.rule_from_head[X])&todo
+                for k in rules:
+                    actions.append((i,k))
+            good_actions = [ a for a in actions if count_nt(a[1])>1 ]
+            if good_actions:
+                actions = good_actions
+            try:
+                i,k = choice(actions)
+            except IndexError:
+                break
+            word[i:i+1] = self.rules[k][1:]
+            if uniform(0,1)<0.1*len(word):
+                todo.discard(k)
+        short = self.shortcuts()
+        res = []
+        for X in word:
+            res.extend(repr((Y,)) for Y in short[X])
+
+        parser = params.get("parser_name", "")
+        if parser.endswith(".py"):
+            parser = basename(parser)[:-3]
+        else:
+            parser = "..."
+
+        write_block(fd, 0, """
+        #! /usr/bin/env python
+        # %(example_name)s - illustrate the use of a Wisent-generated parser
+        # example code autogenerated on %(date)s
+        # generator: wisent %(version)s, http://seehuhn.de/pages/wisent
+        """%params, first=True)
+        if 'fname' in params:
+            fd.write("# source: %(fname)s\n"%params)
+
+        fd.write('\n')
+        fd.write('from %s import Parser\n'%parser)
+
+        write_block(fd, 0, getsource(template.print_tree))
+
+        fd.write('\n')
+        for l in split_it(res, start1="input = [ ", end2=" ]"):
+            fd.write(l+'\n')
+        write_block(fd, 0, """
+        p = Parser()
+        try:
+            tree = p.parse(input)
+        except p.ParseErrors, e:
+            for token,expected in e.errors:
+                if token[0] == p.EOF:
+                    print >>stderr, "unexpected end of file"
+                    continue
+
+                found = repr(token[0])
+                if len(expected) == 1:
+                    msg = "missing %s (found %s)"%(repr(expected[0]), found)
+                else:
+                    msg1 = "parse error before %s, "%found
+                    l = sorted([ repr(s) for s in expected ])
+                    msg2 = "expected one of "+", ".join(l)
+                    msg = msg1+msg2
+                print >>stderr, msg
+            raise SystemExit(1)
+        """)
+        fd.write('\n')
+        fd.write('print_tree(tree, p.terminals)\n')
 
 ######################################################################
 # read grammar files
 
-def _parse_grammar_file(fname):
+def _parse_grammar_file(fd, params={}):
     """Read a grammar file and return the resulting parse tree.
 
     The return value of this function is a tuple, consisting of the
@@ -493,18 +577,18 @@ def _parse_grammar_file(fname):
     max_err = 100
     p = Parser(max_err=max_err)
     try:
-        fd = open(fname)
         tree = p.parse(tokens(fd))
-        fd.close()
         has_errors = False
     except SyntaxError, e:
-        _print_error(e.msg, e.lineno, e.offset, e.filename)
+        _print_error(e.msg, e.lineno, e.offset,
+                     fname=params.get("fname", None))
         tree = None
         has_errors = True
     except p.ParseErrors, e:
         for token,expected in e.errors:
             if token[0] == p.EOF:
-                _print_error("unexpected end of file", fname=fname)
+                _print_error("unexpected end of file",
+                             fname=params.get("fname", None))
                 continue
 
             def quote(x):
@@ -527,7 +611,8 @@ def _parse_grammar_file(fname):
             if len(expected) == 1:
                 missing = quote(expected[0])
                 _print_error("missing %s (found %s)"%(missing, found),
-                             token[2], token[3], fname)
+                             token[2], token[3],
+                             fname=params.get("fname", None))
                 continue
 
             msg1 = "parse error before %s"%found
@@ -535,11 +620,13 @@ def _parse_grammar_file(fname):
             if expect_eol:
                 l.append("end of line")
             msg2 = "expected "+", ".join(l[:-1])+" or "+l[-1]
-            _print_error(msg1+", "+msg2, token[2], token[3], fname)
+            _print_error(msg1+", "+msg2, token[2], token[3],
+                         fname=params.get("fname", None))
         tree = e.tree
         has_errors = True
         if len(e.errors) == max_err and tree is None:
-            _print_error("too many errors, giving up ...", fname=fname)
+            _print_error("too many errors, giving up ...",
+                         fname=params.get("fname", None))
     return tree, has_errors
 
 def _extract_rules(tree, aux={}):
@@ -606,16 +693,16 @@ def _extract_rules(tree, aux={}):
                         yield [ a, c ], []
                         yield [ a, a, b, c ], []
 
-def read_grammar(fname, params={}, checkfunc=None):
-    """Convert a textual description of a grammar into a `Grammar` object.
+def read_grammar(fd, params={}, checkfunc=None):
+    """Convert a grammar file into a `Grammar` object.
 
-    This function reads the description of a grammar from a text file.
-    If the contents of this file are valid, a `Grammar` object is
-    returned.  Otherwise a list of errors is printed to `stderr` and
-    the program is terminated.
+    This function reads the textual description of a grammar from a
+    file.  If the contents of this file are valid, a `Grammar` object
+    is returned.  Otherwise a list of errors is printed to `stderr`
+    and the program is terminated.
     """
-    params.setdefault("fname", fname)
-    tree, has_errors = _parse_grammar_file(fname)
+    fname = params.get("fname", None)
+    tree, has_errors = _parse_grammar_file(fd)
     if tree is None:
         raise SystemExit(1)
 
